# minataur-rust

./: .gitignore  Cargo.toml  readme.md
html/: index.html
html/components/: appbar.html  footer.html  scripts.html  search.html
html/css/: index.css
html/js/default/: console.js  global.js  websocket.js
html/js/index/: charts.js  index.js  wsc.js
html/layouts/: base.html
src/: api.rs  config.rs  constants.rs  graphql.rs  graphql_client.rs  main.rs  models.rs  payload.rs  render.rs  responses.rs  routes.rs  websocket.rs
src/Api/: mina_version.rs  not_found.rs
src/Models/: daemon_status.rs  mina_version.rs  runtime_config.rs
src/Responses/: generic.rs
src/Routes/: index.rs  not_found.rs
src/Templates/: index.pug
static/css/: index.css  theme.css
templates/: index.html
templates/components/: appbar.html  footer.html  scripts.html
templates/layouts/: base.html
