[package]
name = "Minataur"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
actix-ws = "0.3.0"
actix-files = "0.6.6"
futures-util = "0.3.30"
serde = { version = "1.0.210", features = ["derive"] }
config = "0.14.0"
log = "0.4.22"
tokio = { version = "1.40.0", features = ["full"] }
sqlx = { version = "0.8.2", features = ["runtime-tokio-rustls", "postgres"] }
reqwest = { version = "0.12.7", features = ["json"] }
serde_json = "1.0.128"
tera = "1.20.0"